<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starjobsearch"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_industry" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/desc_job1" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/desc_job2" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/desc_job3" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/desc_job4" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/desc_job5" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_employement" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desc_parttime" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desc_fulltime" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_personalinfo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/editText16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/form_firstname"
                    android:hint="@string/form_firstname"/>

                <EditText
                    android:id="@+id/editText17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/form_lastname"
                    android:hint="@string/form_lastname"/>

            </LinearLayout>

            <EditText
                android:id="@+id/editText20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/dob"
                android:hint="@string/dob"
                android:layout_margin="5dp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender" />

                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_f" />

                <RadioButton
                    android:id="@+id/radioButton23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_m" />
            </RadioGroup>

            <EditText
                android:id="@+id/editText18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/address"
                android:hint="@string/address"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/editText19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/email"
                android:hint="@string/email"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_otherinfo" />

            <EditText
                android:id="@+id/editText21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/educationlv"
                android:hint="@string/educationlv"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/editText22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/desc_lastdrawnsalary"
                android:hint="@string/lastdrawnsal"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_summary" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:hint="@string/desc_summary"
                android:layout_margin="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="220dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/emailalert" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/yes" />
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>









